[gd_scene load_steps=11 format=3 uid="uid://c6snrkt0lx7rr"]

[ext_resource type="Script" path="res://addons/resource_databases/editor_only/ui/components/collection_view/collection_view.gd" id="2_r2ggo"]
[ext_resource type="PackedScene" uid="uid://drfc1vxe6tdt2" path="res://addons/resource_databases/editor_only/ui/components/database_entry/database_entries_top_bar.tscn" id="5_yml8w"]
[ext_resource type="PackedScene" uid="uid://cq3tpu7cdhlq4" path="res://addons/resource_databases/editor_only/ui/components/view_page_counter/view_page_counter.tscn" id="6_fv67i"]
[ext_resource type="PackedScene" uid="uid://dgpxlgbitn4fr" path="res://addons/resource_databases/editor_only/ui/components/drag_and_drop_panel/drag_and_drop_panel.tscn" id="7_tjc6f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_shf0k"]
content_margin_left = 10.0
content_margin_top = 4.0
content_margin_right = 10.0
content_margin_bottom = 4.0
bg_color = Color(0.142, 0.166167, 0.2, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_01y5v"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_00b4q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gl4rf"]
content_margin_left = 6.0
content_margin_top = 2.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.113725, 0.133333, 0.160784, 1)
border_width_left = 2
border_color = Color(0.439216, 0.729412, 0.980392, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_66tam"]
color = Color(0.441, 0.728467, 0.98, 0.392157)
thickness = 2

[sub_resource type="CodeHighlighter" id="CodeHighlighter_jhtmh"]
number_color = Color(1, 0.70742, 0.783604, 1)
symbol_color = Color(0.758361, 0.414505, 1, 1)
function_color = Color(0.177751, 0.378312, 1, 1)
member_variable_color = Color(0.447388, 0.890726, 1, 1)
member_keyword_colors = {
"res": Color(1, 0.627451, 0.478431, 1),
"res_type": Color(1, 0.713726, 0.756863, 1)
}

[node name="CollectionView" type="PanelContainer" node_paths=PackedStringArray("_collection_button", "_selection_button", "_selected_collection_label", "_collection_entries_container", "_search_line_edit", "_entries_view_page_counter", "_filters_check_button", "_filters_panel", "_category_filters_container", "_expression_filter_text_edit", "_advanced_filter_options", "_no_categories_label", "_categories_option_button", "_update_category_button", "_clear_category_button")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
theme_type_variation = &"DatabaseEditorPanel"
script = ExtResource("2_r2ggo")
_collection_button = NodePath("VBoxContainer/ToolsPanel/ToolsContainer/CollectionMenuButton")
_selection_button = NodePath("VBoxContainer/ToolsPanel/ToolsContainer/SelectionMenuButton")
_selected_collection_label = NodePath("VBoxContainer/ToolsPanel/ToolsContainer/SelectedCollectionLabel")
_collection_entries_container = NodePath("VBoxContainer/HSplitContainer/EntriesElements/VBoxContainer/ScrollContainer/CollectionEntriesContainer")
_search_line_edit = NodePath("VBoxContainer/HSplitContainer/EntriesElements/VBoxContainer/SearchLineEdit")
_entries_view_page_counter = NodePath("VBoxContainer/HSplitContainer/EntriesElements/VBoxContainer/ViewPageCounter")
_filters_check_button = NodePath("VBoxContainer/ToolsPanel/ToolsContainer/FiltersCheckButton")
_filters_panel = NodePath("VBoxContainer/HSplitContainer/FiltersContainer")
_category_filters_container = NodePath("VBoxContainer/HSplitContainer/FiltersContainer/VBoxContainer/ScrollContainer/CategoryFiltersContainer")
_expression_filter_text_edit = NodePath("VBoxContainer/HSplitContainer/FiltersContainer/VBoxContainer/ExpressionFilterTextEdit")
_advanced_filter_options = NodePath("VBoxContainer/HSplitContainer/FiltersContainer/VBoxContainer/AdvancedFilterOptions")
_no_categories_label = NodePath("VBoxContainer/HSplitContainer/FiltersContainer/VBoxContainer/AdvancedFilterOptions/NoCategoriesLabel")
_categories_option_button = NodePath("VBoxContainer/HSplitContainer/FiltersContainer/VBoxContainer/AdvancedFilterOptions/CategoriesOptionButton")
_update_category_button = NodePath("VBoxContainer/HSplitContainer/FiltersContainer/VBoxContainer/AdvancedFilterOptions/UpdateCategoryButton")
_clear_category_button = NodePath("VBoxContainer/HSplitContainer/FiltersContainer/VBoxContainer/AdvancedFilterOptions/ClearCategoryButton")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ToolsPanel" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_type_variation = &"ToolsTopPanel"

[node name="ToolsContainer" type="HBoxContainer" parent="VBoxContainer/ToolsPanel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="SelectedCollectionLabel" type="RichTextLabel" parent="VBoxContainer/ToolsPanel/ToolsContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_shf0k")
bbcode_enabled = true
text = "<Selected collection>"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false

[node name="CollectionMenuButton" type="MenuButton" parent="VBoxContainer/ToolsPanel/ToolsContainer"]
layout_mode = 2
size_flags_horizontal = 0
disabled = true
text = "Collection"
switch_on_hover = true
item_count = 2
popup/item_0/text = "Settings"
popup/item_1/text = "Categories"
popup/item_1/id = 1

[node name="SelectionMenuButton" type="MenuButton" parent="VBoxContainer/ToolsPanel/ToolsContainer"]
layout_mode = 2
size_flags_horizontal = 0
disabled = true
text = "Selection"
switch_on_hover = true
item_count = 9
popup/item_0/text = "Select all"
popup/item_1/text = "Unselect all"
popup/item_1/id = 1
popup/item_1/disabled = true
popup/item_2/text = "Invert selection"
popup/item_2/id = 2
popup/item_3/id = -1
popup/item_3/separator = true
popup/item_4/text = "Invalidate selected"
popup/item_4/id = 4
popup/item_4/disabled = true
popup/item_5/text = "Remove selected"
popup/item_5/id = 5
popup/item_5/disabled = true
popup/item_6/id = -1
popup/item_6/separator = true
popup/item_7/text = "Add category to selected"
popup/item_7/id = 7
popup/item_7/disabled = true
popup/item_8/text = "Remove category from selected"
popup/item_8/id = 8
popup/item_8/disabled = true

[node name="FiltersCheckButton" type="CheckButton" parent="VBoxContainer/ToolsPanel/ToolsContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_styles/focus = SubResource("StyleBoxEmpty_01y5v")
text = "Filters"

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0
theme_override_constants/minimum_grab_thickness = 16
theme_override_icons/grabber = SubResource("CompressedTexture2D_00b4q")

[node name="EntriesElements" type="Control" parent="VBoxContainer/HSplitContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/EntriesElements"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="DatabaseEntryTopBar" parent="VBoxContainer/HSplitContainer/EntriesElements/VBoxContainer" instance=ExtResource("5_yml8w")]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HSplitContainer/EntriesElements/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CollectionEntriesContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/EntriesElements/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="SearchLineEdit" type="LineEdit" parent="VBoxContainer/HSplitContainer/EntriesElements/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Search..."

[node name="ViewPageCounter" parent="VBoxContainer/HSplitContainer/EntriesElements/VBoxContainer" instance=ExtResource("6_fv67i")]
layout_mode = 2
size_flags_vertical = 8

[node name="DragAndDropPanel" parent="VBoxContainer/HSplitContainer/EntriesElements" instance=ExtResource("7_tjc6f")]
layout_mode = 1

[node name="FiltersContainer" type="PanelContainer" parent="VBoxContainer/HSplitContainer"]
visible = false
custom_minimum_size = Vector2(165, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
theme_override_styles/panel = SubResource("StyleBoxFlat_gl4rf")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/FiltersContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/FiltersContainer/VBoxContainer"]
layout_mode = 2
text = "Categories"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HSplitContainer/FiltersContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="CategoryFiltersContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/FiltersContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HSplitContainer/FiltersContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 7
theme_override_styles/separator = SubResource("StyleBoxLine_66tam")

[node name="Label2" type="Label" parent="VBoxContainer/HSplitContainer/FiltersContainer/VBoxContainer"]
layout_mode = 2
text = "Expression"

[node name="ExpressionFilterTextEdit" type="TextEdit" parent="VBoxContainer/HSplitContainer/FiltersContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "res -> resource
res_type -> class"
wrap_mode = 1
syntax_highlighter = SubResource("CodeHighlighter_jhtmh")

[node name="ExpressionOptionsContainer" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/FiltersContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6
alignment = 1

[node name="FilterWithExpressionButton" type="Button" parent="VBoxContainer/HSplitContainer/FiltersContainer/VBoxContainer/ExpressionOptionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Filter"
flat = true

[node name="ClearExpressionButton" type="Button" parent="VBoxContainer/HSplitContainer/FiltersContainer/VBoxContainer/ExpressionOptionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Clear"
flat = true

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/HSplitContainer/FiltersContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 7
theme_override_styles/separator = SubResource("StyleBoxLine_66tam")

[node name="AdvancedFilterOptionsCheckButton" type="CheckButton" parent="VBoxContainer/HSplitContainer/FiltersContainer/VBoxContainer"]
layout_mode = 2
text = "Advanced"

[node name="AdvancedFilterOptions" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/FiltersContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="NoCategoriesLabel" type="Label" parent="VBoxContainer/HSplitContainer/FiltersContainer/VBoxContainer/AdvancedFilterOptions"]
layout_mode = 2
text = "No categories"
horizontal_alignment = 1

[node name="CategoriesOptionButton" type="OptionButton" parent="VBoxContainer/HSplitContainer/FiltersContainer/VBoxContainer/AdvancedFilterOptions"]
visible = false
layout_mode = 2
text_overrun_behavior = 3
fit_to_longest_item = false

[node name="UpdateCategoryButton" type="Button" parent="VBoxContainer/HSplitContainer/FiltersContainer/VBoxContainer/AdvancedFilterOptions"]
layout_mode = 2
disabled = true
text = "Update category"
flat = true

[node name="ClearCategoryButton" type="Button" parent="VBoxContainer/HSplitContainer/FiltersContainer/VBoxContainer/AdvancedFilterOptions"]
layout_mode = 2
disabled = true
text = "Clear category"
flat = true

[connection signal="toggled" from="VBoxContainer/ToolsPanel/ToolsContainer/FiltersCheckButton" to="." method="_on_filters_check_button_toggled"]
[connection signal="text_changed" from="VBoxContainer/HSplitContainer/EntriesElements/VBoxContainer/SearchLineEdit" to="." method="_on_search_line_edit_text_changed"]
[connection signal="change_page_requested" from="VBoxContainer/HSplitContainer/EntriesElements/VBoxContainer/ViewPageCounter" to="." method="_on_view_page_counter_change_page_requested"]
[connection signal="paths_dropped" from="VBoxContainer/HSplitContainer/EntriesElements/DragAndDropPanel" to="." method="_register_resources_in_collection"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/FiltersContainer/VBoxContainer/ExpressionOptionsContainer/FilterWithExpressionButton" to="." method="_on_filter_with_expression_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/FiltersContainer/VBoxContainer/ExpressionOptionsContainer/ClearExpressionButton" to="." method="_on_clear_expression_button_pressed"]
[connection signal="toggled" from="VBoxContainer/HSplitContainer/FiltersContainer/VBoxContainer/AdvancedFilterOptionsCheckButton" to="." method="_on_advanced_filter_options_check_button_toggled"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/FiltersContainer/VBoxContainer/AdvancedFilterOptions/UpdateCategoryButton" to="." method="_on_update_category_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/FiltersContainer/VBoxContainer/AdvancedFilterOptions/ClearCategoryButton" to="." method="_on_clear_category_button_pressed"]
